--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
         "deploy": "git push heroku master"
     },
     "keywords": [],
+    "engines": {
+        "node": "12.14.1"
+    },
     "author": "Sacha Sedriks <sachased@gmail.com>",
     "license": "ISC",
     "dependencies": {
